<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/alert_border"
    android:layout_gravity="center"
    android:padding="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="10dp"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAddress"
                style="@style/confirm_load_textView"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/update_status"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_marginRight="15dp"
                android:textColor="#F41A0A"
                android:layout_alignParentEnd="true"
                android:id="@+id/ivCancel"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@id/rl1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radios"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="right"
                android:inputType="text"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/rbLoaded"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:button="@null"
                    android:drawablePadding="30dp"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="@string/loaded"
                    android:textSize="20dip"
                    android:gravity="start|center"/>

                <RadioButton
                    android:id="@+id/rbInTransit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawablePadding="30dp"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="@string/intransit"
                    android:textSize="20dp"
                    android:gravity="start|center"/>

                <RadioButton
                    android:id="@+id/rbReached"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawablePadding="30dp"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="@string/reached"
                    android:textSize="20dp"
                    android:gravity="start|center" />
                <RadioButton
                    android:id="@+id/rbUnLoaded"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawablePadding="30dp"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="@string/unloaded"
                    android:textSize="20dp"
                    android:gravity="start|center" />
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="-10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:id="@+id/btnSave"
        android:layout_below="@id/rl1"
        android:elevation="10dp"
        card_view:cardCornerRadius="6dp"
        android:layout_width="200dp"
        card_view:cardBackgroundColor="@color/blue"
        android:layout_height="wrap_content"
        >
        <TextView
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/save"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>